# mindframe-app

./: .env.docker  .gitignore  DOCKER_DEPLOYMENT.md  DOKPLOY_SETUP.md  DOKPLOY_TROUBLESHOOTING.md  EXTERNAL_MONGODB_SETUP.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml
ai/docs/: create-prd.md  generate-task.md  task-list.md
ai/interpretation-data/: interpretation-personal-values.json  interpretation-result.json  interpretation.json  mongoData-example.json  x.json
ai/tasks/: feature-completion-assessment.md  prd-psychological-report-generator.md
backend/: .env.example  Dockerfile  README.md  README_TEMPLATE_SYSTEM.md  app.py  connect_mongo_to_interpretation.py  requirements.txt  run_api_server.py  simple_api_server.py
backend/config/: rate_limiting.py
backend/deprecated/: .env.backup_20250820_043956  simple_api_server.PY.MD
backend/dev/: check_db.py  production_migration_analysis.json  pytest.ini  run_server.py  start_server.py
backend/docs/: API_DOCUMENTATION.md  BACKEND_MIGRATION_PLAN.md  DEPENDENCY_ANALYSIS.md  JOB_QUEUE_IMPLEMENTATION_COMPLETE.md  JOB_QUEUE_IMPLEMENTATION_PLAN.md  LOGGING_CONFIG.md  MIGRATION_PLAN.md  MONGODB_INTEGRATION_GUIDE.md  PDF_JOB_SCHEMA.md  PERSONALITY_INTEGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCT_CONFIG_SCHEMA.md  README.md  SECURITY_CONFIG.md  SIMPLE_API_DEPRECATION_NOTICE.md  TEMPLATE_SKELETON_GUIDE.md
backend/job_queue/: __init__.py  config.py  jobs.py  workers.py
backend/remove/: DEBUG_REPORT.md  FINAL_FIX_REPORT.md  analyze_debug_pdfs.py  check_pdf_content.py  compare_pdf_results.py  debug_dimensions.py  debug_forced_breaks.html  debug_modified_template.html  debug_page_breaks.py  (+34 more)
frontend/: Dockerfile  INTERPRETATION_UPDATE_SUMMARY.md  JSON_VIEWER_IMPROVEMENTS.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+108 files in other folders)
